--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,254 +1,300 @@
+@mixin responsive($breakpoint, $media: all) {
+    @media only #{$media} and ($breakpoint) {
+        @content;
+    }
+}
+
+@mixin bp($breakpoint) {
+    $medium: 640px / 16px * 1em;
+    $large: 1024px / 16px * 1em;
+    $xlarge: 1280px / 16px * 1em;
+    @if $breakpoint==medium {
+        @media print,
+        (min-width: $medium) {
+            @content;
+        }
+    }
+    @else if $breakpoint==large {
+        @media (min-width: $large) {
+            @content;
+        }
+    }
+    @else if $breakpoint==xlarge {
+        @media (min-width: $xlarge) {
+            @content;
+        }
+    }
+}
 
 * {
     background: #eef;
     font-family: open_sans;
 }
 
-
 #cv {
     max-width: 1024px;
     margin: 0 auto;
-    padding: 0 3rem;
+    @include bp(large) {
+        padding: 0 3rem;
+    }
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 150%;
     color: #333;
     text-align: center;
     font-weight: bold;
-    margin: 0;
+    margin: 0 0 1rem 0;
+    @include bp(medium) {
+        font-size: 200%;
+        margin: 0;
+    }
+    @media print {
+        font-size: 16pt;
+    }
 }
 
-a, a:link, a:visited {
-  color: inherit;
+a,
+a:link,
+a:visited {
+    color: inherit;
+    @media print {
+        text-decoration: none;
+    }
 }
 
 section {
-  h2 {
-    border-bottom: 2px #888 solid;
-    margin: 1rem 0;
-    padding-bottom: 0.3rem;
-    font-size: 120%;
-    a, a:link, a:visited {
-      color: #333;
-      padding-left: 5px;
-      font-size: 70%;
-      display: none;
-    }
+    h2 {
+        border-bottom: 2px #888 solid;
+        margin: 1rem 0;
+        padding-bottom: 0.3rem;
+        font-size: 120%;
+        @media print {
+            border: none;
+            margin-bottom: 0;
+        }
+        a,
+        a:link,
+        a:visited {
+            color: #333;
+            padding-left: 5px;
+            font-size: 70%;
+            display: none;
+        }
         &:hover a {
-          &:link, &:visited {
-            display: inline-block;
-          }
+            &:link,
+            &:visited {
+                display: inline-block;
+            }
+        }
     }
-
-  }
-  h3 {
-    font-size: 100%;
-    margin: 0;
-    display: grid;
-    grid-template-columns: 180px auto 200px;
-    :nth-child(2) {
-      font-weight: normal;
+    h3 {
+        font-size: 100%;
+        margin: 0;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        @include bp(medium) {
+            grid-template-columns: 180px auto 200px;
+        }
+         :nth-child(2) {
+            font-weight: normal;
+        }
+         :nth-child(3) {
+            color: #555;
+            text-align: left;
+            font-weight: normal;
+            font-size: 90%;
+            @include bp(medium) {
+                text-align: right;
+                font-weight: bold;
+                font-size: 100%;
+            }
+        }
+        @media print {
+            border-top: 0.25px #333 solid;
+            padding: 2mm 0 0 0;
+            a:link::after,
+            a:visited::after {
+                content: attr(href);
+                font-size: 70%;
+                font-weight: normal;
+                color: #555;
+                display: block;
+                clear: both;
+            }
+        }
     }
-    :nth-child(3) {
-      color: #555;
-      text-align: right;
+    p {
+        text-align: justify;
+        @media print {
+            margin: 10px 0;
+        }
     }
-
-  }
 }
 
 nav {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(5, auto);
-  font-size: 120%;
-  a, a:link, a:visited {
-    text-align: center;
-    padding: 0 1em;
-  }
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(3, auto);
+    font-weight: bold;
+    @include bp(medium) {
+        grid-template-columns: repeat(4, auto);
+        font-size: 120%;
+        font-weight: normal;
+    }
+    &>*:first-child {
+        display: none;
+        @include bp(medium) {
+            display: inline-block;
+        }
+    }
+    a,
+    a:link,
+    a:visited {
+        text-align: center;
+        padding: 0 1em;
+    }
+    @media print {
+        display: none;
+    }
 }
 
-
 #contact {
-  margin: 1em 0;
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(5, 120px);
-  a, a:link, a:visited {
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
-
-  [class*=" icon-"], [class^="icon-"] {
-    margin: 0 0.5rem 0 0.7rem;
-  }
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(2, 50%);
+    &>*:first-child {
+        display: none;
+        @media print {
+            display: inline-block;
+        }
+    }
+    @include bp(medium) {
+        margin: 1em 0;
+        grid-template-columns: repeat(4, 120px);
+        @media print {
+            grid-template-columns: repeat(5, auto);
+        }
+    }
+    a,
+    a:link,
+    a:visited {
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+    [class*=" icon-"],
+    [class^="icon-"] {
+        margin: 0 0.5rem 0 0.7rem;
+    }
 }
 
 #statement {
-  font-style: italic;
-  color: #555;
-  padding: 1rem;
+    font-style: italic;
+    color: #555;
+    padding: 1rem 0;
+    @include bp(medium) {
+        padding: 1rem;
+    }
 }
 
 .tech {
-  margin-top: 0.8em;
-  span {
-    font-size: 80%;
-    background-color: #888;
-    color: white;
-    padding: 2px 5px;
-    margin: 1px;
-    display: inline-block;
-    border-radius: 3px;
-  }
+    margin-top: 0.8em;
+    span {
+        font-size: 80%;
+        background-color: #888;
+        color: white;
+        padding: 2px 5px;
+        margin: 1px;
+        display: inline-block;
+        border-radius: 3px;
+        @media print {
+            margin: 0;
+            padding: 0;
+            color: black;
+            &:not(:last-child):after {
+                content: "•";
+                margin: 5pt;
+            }
+        }
+    }
 }
 
 @media print {
-  body {
-    font-size: 10pt;
-  }
-  h1 {
-    font-size: 16pt;
-  }
-   nav {
-     display: none;
-   }
-
-#cv, #statement {
-  padding: 0;
-}
-
-p {
-  margin: 10px 0;
-}
-
-.tech {
-  span {
-  margin: 0;
-  padding: 0;
-  color: black;
-    &:not(:last-child):after {
-      content: "•";
-      margin: 5pt;
+    body {
+        font-size: 10pt;
     }
-  }
-}
-
-a:link, a:visited {
-  text-decoration: none;
-}
-
-#portfolio {
-  p {
-      display: none;
-  }
-  // .tech {
-  //     border-bottom: 0.25px black solid;
-  //     padding-bottom: 0.5em;
-  //     margin-bottom: 0.2em;
-  // }
-}
-
-#education p {
-  display: none;
-}
-
-#portfolio h3 {
-       grid-template-columns: 300px auto 150px !important;
-}
-
-section {
-
-h2 {
-  border: none;
-  margin-bottom: 0;
-}
-
-h3 {
-  border-top: 0.25px #333 solid;    
-
-  padding: 2mm 0 0 0;
-
-  a:link::after, a:visited::after {
-    content: attr(href);
-    font-size: 70%;
-    font-weight: normal;
-    color: #555;
-    display: block;
-    clear: both;
-} 
-
-}
-
-}
-
+    #cv,
+    #statement {
+        padding: 0;
+    }
+    #portfolio,
+    #education {
+        p {
+            display: none;
+        }
+    }
+    #portfolio h3 {
+        grid-template-columns: 300px auto 150px !important;
+    }
 }
 
 //Webfonts
-
-
 $icon-email: "\e900";
 $icon-github: "\e902";
 $icon-twitter: "\e903";
 $icon-instagram: "\ea92";
-
-
-
 @font-face {
-  font-family: 'icomoon';
-  src: url('icomoon.woff?s2lsqw') format('woff');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'icomoon';
+    src: url('icomoon.woff?s2lsqw') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
-
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+[class^="icon-"],
+[class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-email {
-  &:before {
-    content: $icon-email;
-  }
+    &:before {
+        content: $icon-email;
+    }
 }
+
 .icon-github {
-  &:before {
-    content: $icon-github;
-  }
+    &:before {
+        content: $icon-github;
+    }
 }
+
 .icon-twitter {
-  &:before {
-    content: $icon-twitter;
-  }
+    &:before {
+        content: $icon-twitter;
+    }
 }
+
 .icon-instagram {
-  &:before {
-    content: $icon-instagram;
-  }
+    &:before {
+        content: $icon-instagram;
+    }
 }
-
-
 
 @font-face {
     font-family: 'open_sans';
     src: url('OpenSans-Regular-webfont.woff') format('woff');
     font-weight: regular;
     font-style: normal;
-
 }
 
 @font-face {
@@ -263,16 +309,11 @@ $icon-instagram: "\ea92";
     src: url('OpenSans-Bold-webfont.woff') format('woff');
     font-weight: bold;
     font-style: normal;
-
 }
-
 
 @font-face {
     font-family: 'open_sans';
     src: url('OpenSans-Italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: italic;
-
 }
-
-
