--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,34 @@
 @charset "UTF-8";
 * {
-  background: #eef;
   font-family: open_sans;
+}
+
+body {
+  background-image: url(../img/banner.jpg);
+  background-attachment: scroll;
+  background-position: top;
+  background-color: #eef;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+@media print {
+  body {
+    background: none;
+  }
+}
+
+#matt {
+  display: block;
+  width: 20vw;
+  margin: 20vw auto 2rem auto;
+  box-shadow: 0px 0px 5vw 0px rgba(0, 0, 0, 0.9);
+}
+
+@media print {
+  #matt {
+    display: none;
+  }
 }
 
 #cv {
@@ -12,6 +39,12 @@
 @media (min-width: 64em) {
   #cv {
     padding: 0 3rem;
+  }
+}
+
+@media print {
+  #cv {
+    margin-top: 0;
   }
 }
 
@@ -241,6 +274,10 @@ nav a:visited {
   margin: 1px;
   display: inline-block;
   border-radius: 3px;
+}
+
+.tech span.highlight {
+  background-color: #333;
 }
 
 @media print {
