--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,16 +27,43 @@
 }
 
 * {
-    background: #eef;
     font-family: open_sans;
+}
+
+body {
+  background-image: url(../img/banner.jpg);
+  background-attachment: scroll;
+  background-position: top;
+  background-color: #eef;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  @media print {
+    background: none;
+  }
+}
+
+#matt {
+  display: block;
+  width: 20vw;
+  margin: 20vw auto 2rem auto;
+  box-shadow: 0px 0px 5vw 0px rgba(0,0,0,0.9);
+  @media print {
+    display: none;
+  }
 }
 
 #cv {
     max-width: 1024px;
     margin: 0 auto;
+
     @include bp(large) {
         padding: 0 3rem;
     }
+
+  @media print {
+    margin-top: 0;
+  }
+
 }
 
 h1 {
@@ -209,6 +236,9 @@ nav {
         margin: 1px;
         display: inline-block;
         border-radius: 3px;
+        &.highlight {
+          background-color: #333;
+        }
         @media print {
             margin: 0;
             padding: 0;
