--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,14 @@ body {
   display: block;
   width: 20vw;
   margin: 20vw auto 2rem auto;
+  max-width: 150px;
   box-shadow: 0px 0px 5vw 0px rgba(0, 0, 0, 0.9);
+}
+
+@media screen and (min-width: 750px) {
+  #matt {
+    margin-top: calc(33vw - 75px);
+  }
 }
 
 @media print {
