--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,6 +46,11 @@ body {
   display: block;
   width: 20vw;
   margin: 20vw auto 2rem auto;
+  max-width: 150px;
+  @media screen and (min-width: 750px) {
+    margin-top: calc(33vw - 75px);
+  }
+
   box-shadow: 0px 0px 5vw 0px rgba(0,0,0,0.9);
   @media print {
     display: none;
